[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Place egg-info and build artifacts in .venv
build-dir = ".venv/build"

[project]
name = "core-cli"
dynamic = ["version"]
description = "ehAye™ Core CLI - A modular command-line interface framework"
license = "MIT"
authors = [
    {name = "Val Neekman", email = "info@neekware.com"}
]
requires-python = ">=3.9"
dependencies = [
    "click==8.2.1",
    "rich==14.1.0",
    "pyyaml==6.0.2",
    "tomli==2.2.1; python_version < '3.11'",
    "tomlkit==0.13.3",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
    "pytest-cov==6.2.1",
    "black==25.1.0",
    "ruff==0.12.8",
    "mypy==1.17.1",
    "pre-commit==4.2.0",
    "types-PyYAML==6.0.12.20250516",
]

[project.scripts]
cli = "commands.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["commands", "commands.*"]
exclude = ["tests*"]

[tool.setuptools.dynamic]
version = {attr = "commands.__version__"}

[tool.setuptools.package-data]
commands = ["bin/*"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.lint.isort]
known-first-party = ["commands"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
